Add code to cardpack model
