# server/src/errors/cardpackErrors.ts
@@ -10,3 +10,16 @@ export class CardpackNotFoundError extends Error {
         Object.setPrototypeOf(this, CardpackNotFoundError.prototype);
     }
 }
+
+export class CardpackCodeAlreadyTakenError extends Error {
+    code: string | undefined;
+
+    constructor(code?: string) {
+        super('Cardpack code already taken.');
+
+        this.code = code;
+
+        // Set the prototype explicitly.
+        Object.setPrototypeOf(this, CardpackCodeAlreadyTakenError.prototype);
+    }
+}
